--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
             <div class="flex-container">
-                <div id="sidenav-flex">
+                <div class="sidenav-flex">
                     <div class="sidenav">
                         <a href="#home">HOME</a>
                         <a href="#home">SEARCH FLIGHTS</a>
