--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <input type="reset" class="action_button" value="Reset">
                     </form>
                     <button id="buy_button"onclick="overlay_on()" class="action_button">Buy</button>
-                    <div id="overlay" onclick="off()">
+                    <div id="overlay">
                         <div id="overlay_text">Ticket Reserved</div>
                     </div>
                     <script src='assets/js/overlay.js'> </script>
