--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="assets/css/select.css">
         <link rel="stylesheet" href="assets/css/overlay.css">
     </head>
-    <div>
-        <body style="background-color: rgb(2, 34, 66);">
+    <body style="background-color: rgb(2, 34, 66);"></body>
+        <div>
+        
             <div class="flex-container">
                 <div class="sidenav-flex">
                     <div class="sidenav">
@@ -181,10 +182,10 @@
                     <script src='assets/js/overlay.js'> </script>
                 </div>
             </div>
-        </body>
+        </divy>
         <footer>
             <p>Made by: Someone Someoneski</p>
             <p>Mail: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
         </footer>
-    </div>
+    </body>
 </html>
