--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
         <link rel="stylesheet" href="assets/css/select.css">
         <link rel="stylesheet" href="assets/css/overlay.css">
     </head>
-    <body style="background-color: rgb(2, 34, 66);"></body>
+    <body style="background-color: rgb(2, 34, 66);">
         <div>
-        
             <div class="flex-container">
                 <div class="sidenav-flex">
                     <div class="sidenav">
@@ -175,14 +174,15 @@
                         <br>
                         <input type="reset" class="action_button" value="Reset">
                     </form>
-                    <button id="buy_button"onclick="overlay_on()" class="action_button">Buy</button>
+                    <button id="buy_button" onclick="overlay_on()" class="action_button">Buy</button>
                     <div id="overlay">
                         <div id="overlay_text">Ticket Reserved</div>
                     </div>
                     <script src='assets/js/overlay.js'> </script>
                 </div>
             </div>
-        </divy>
+        </div>
+        
         <footer>
             <p>Made by: Someone Someoneski</p>
             <p>Mail: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
