--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <input type="submit" id="buy_button" onclick="overlay_on()" class="action_button" value="Buy" form="ticket_form">
                     </form>
                     <div id="overlay" onclick="overlay_off()">
-                        <div id="overlay_text">Ticket Reserved</div>
+                        <div id="overlay_text">Error:<br></div>
                     </div>
                     <script src='assets/js/overlay.js'> </script>
                 </div>
